welcome.lessons.welcome.loopfor.LoopCourseForest.scala.error
Runner:23: error: not found: value nbCote
  	nbCote = nbCote + 1
        ^